# polish-llm-medical-dataset

./: .gitignore  README.md  main.py  pyproject.toml  translate.py  translations.json
src/: batch_translation.py  clean_dataset.ipynb  combine.py  cost_estimation.py  generate_jsonl.py  translation_test.py
