[project]
name = "polish-llm-medical-finetuning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.2.0",
    "google-genai>=1.52.0",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "langdetect>=1.0.9",
    "lingua-language-detector>=2.1.1",
    "openai>=2.6.1",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ruff>=0.14.3",
]

[tool.ruff]
line-length = 130
target-version = "py312"
exclude = []

[tool.ruff.lint]
select = [
    "B",      # flake8-bugbear
    "C4",     # Helps you write better list/set/dict comprehensions.
    "E",      # pycodestyle errors
    "FA",     # Verifies files use from __future__ import annotations if a type is used in the module that can be rewritten using PEP 563.
    "F",      # pyflakes
    "G",      # Better usage of built-in logging
    "I",      # isort - Import sorting
    "LOG",    # Checks for issues using the standard library logging module.
    "PL",     # pylint
    "PYI",    # Linting rules for type annotations.
    "Q",      # Linting rules for quites
    "RUF",    # Ruff lint
    "TCH",    # Move type only imports to type-checking condition.
    "TID",    # Helps you write tidier imports.
    "UP",     # pyupgrade
    "W",      # pycodestyle warnings
    "SIM",    # flake8-simplify
]

ignore = [
    "SIM112",
    "G004",
    "PLR2004",
    "W293",
    "W291",
    "PLR0913",
    "B008"
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
